--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "REET": "src/"
+            "REET\\": "src/"
         }
     },
     "authors": [
@@ -14,5 +14,8 @@
             "email": "angeloarcillas64@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "zerexei/simplerouter": "^2.2",
+        "zerexei/reet-harf": "^0.1.0"
+    }
 }
