--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\": "src/app"
+            "App\\": "src/app",
+            "Database\\": "src/Database"
         }
     },
     "authors": [
